--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,18 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0-alpha3'
+        classpath 'com.android.tools.build:gradle:3.6.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        google()
     }
 }
