--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda:bintray-release'
 
 buildscript {
     repositories {
@@ -8,13 +8,12 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.novoda:bintray-release:0.5.0'
+//        classpath 'com.novoda:bintray-release:0.9.2'
     }
 }
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 21
@@ -30,14 +29,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
 }
 
-
-publish {
-    groupId = 'com.github.kinkoi'
-    artifactId = 'emojicon-release'
-    publishVersion = '1.0.2'
-    desc = 'Adding emojicon support to Android keyboard'
-    website = 'https://github.com/kinkoi/emojicon'
-}
+//
+//publish {
+//    groupId = 'com.github.kinkoi'
+//    artifactId = 'emojicon-release'
+//    publishVersion = '1.0.2'
+//    desc = 'Adding emojicon support to Android keyboard'
+//    website = 'https://github.com/kinkoi/emojicon'
+//}
